# DevSoftwareSolutionPrototypes

./: README.md  pyproject.toml
homework_1/: main.py
homework_2/: main.py  models.py  request.json  requests.json
homework_3/: main.py  manager.py  models.py  student.db
homework_4/: main.py  student.db
homework_4/api/v1/: course.py  faculty.py  student.py
homework_4/db/models/: models.py
homework_4/schemes/: student.py
homework_4/services/: course.py  entities.py  faculty.py  main_service.py  student.py
homework_5/: main.py
homework_5/api/v1/: auth.py  course.py  faculty.py  student.py  user.py
homework_5/schemes/: user.py
homework_5/services/: course.py  faculty.py  main_service.py  password.py  student.py  token.py  user.py
homework_6/: main.py  student.db
homework_6/api/v1/: auth.py  backend.py  course.py  faculty.py  student.py  user.py
homework_6/db/models/: models.py
homework_6/schemes/: backend.py
homework_6/services/: course.py  entities.py  faculty.py  main_service.py  student.py  token.py  user.py
homework_7/: main.py
homework_7/api/v1/: auth.py  backend.py  course.py  faculty.py  student.py  user.py
homework_7/schemes/: course.py  faculty.py
homework_7/services/: course.py  faculty.py  main_service.py  student.py  user.py
homework_7/tests/test_func/: conftest.py
homework_7/tests/test_func/test_api/: test_auth.py  test_course.py
